@@ -52,6 +52,10 @@ using S1_T = S1::I;
 using T = Int;
 using Void = void;
 c++decl> 
+c++decl> struct S1 { typedef int typeof; }
+                             ^
+22,21: warning: "typeof" is a keyword in C23
+c++decl> 
 c++decl> define I1 of inline namespace B1 of namespace A1 as int
 c++decl> show **::I1 typedef
 namespace A1::inline B1 { typedef int I1; }
@@ -100,6 +104,7 @@ typedef F_I *PF_I_2;
 typedef int *PI;
 struct S1;
 struct S1 { typedef int I; };
+struct S1 { typedef int typeof; };
 typedef S1::I S1_T;
 typedef Int T;
 typedef void Void;
