@@ -19,6 +19,8 @@ typedef typename S1::I S1_T
 show
 show as using
 
+struct S1 { typedef int typeof; }
+
 define I1 of inline namespace B1 of namespace A1 as int
 show **::I1 typedef
 
